# generalist_bt_gen

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO.md  architecture.md  compose.hardware.yaml  compose.yaml  ideas.md  initial_presentation.md  plan.md  project_roadmap.md  ros_interfaces_diagram.drawio
config/: system_description.yaml  tree_metadata.yaml
docker/: entrypoint.sh  requirements.txt
docs/: activity_diagram.drawio  context_gatherer_activity.drawio  gazebo_husky_setup.md  husky_simulation_setup.md  problem_formulation.md  repo_activity_diagram.drawio  research_presentation_outline.md  robot_action_plugins_to_running_system.md  ros_architecture.drawio  ros_class_diagram.drawio  ros_interface_enhancements.md  ros_interfaces_diagram.drawio  thesis_plan.md  thesis_test_scenarios.md  tmux_ros_guide.md  tree_metadata_schema.md
evaluation/: README.md
evaluation/protocol/: complexity_rubric.json  (+6 more)
scripts/: build_workspace.sh  setup_cloud_env.sh  tmux_ros_launch.sh
src/bt_actions/: CMakeLists.txt  package.xml  plugin.xml
src/bt_actions/include/bt_actions/: detect_tree_condition.hpp  explore_field_action.hpp  navigate_action.hpp  take_photo_action.hpp
src/bt_actions/src/: detect_tree_condition.cpp  explore_field_action.cpp  navigate_action.cpp  plugin_registration.cpp  take_photo_action.cpp
src/bt_actions/test/: test_bt_actions_plugins.cpp
src/bt_actions/test/launch/: test_bt_actions_launch.py
src/bt_executor/: CMakeLists.txt  README.md  implementation_plan.md  package.xml
src/bt_executor/config/: bt_config.yaml  bt_executor_params.yaml
src/bt_executor/include/bt_executor/: bt_executor.hpp  bt_failure_handler.hpp  bt_loader.hpp  bt_monitor.hpp  executor_utils.hpp  generalist_bt_server.hpp
src/bt_executor/launch/: bt_executor.launch.py
src/bt_executor/src/: bt_executor.cpp  bt_executor_node.cpp  bt_failure_handler.cpp  bt_loader.cpp  bt_monitor.cpp  executor_utils.cpp  generalist_bt_server.cpp
src/bt_executor/test/: test_bt_components.cpp  test_explore_area_xml.py
src/bt_executor/test/launch/: test_bt_executor_launch.py
src/bt_executor/trees/: 360_rgb_sweep.xml  base_tree.xml  demo_tree.xml  explore_area.xml  navigate_and_photograph.xml  temperature_logging.xml
src/bt_nodes_llm/: CMakeLists.txt  package.xml  plugin.xml
src/bt_nodes_llm/include/bt_nodes_llm/: blackboard_update_node.hpp  thinking_node.hpp
src/bt_nodes_llm/src/: blackboard_update_node.cpp  plugin_registration.cpp  thinking_node.cpp
src/bt_nodes_llm/test/: test_blackboard_update_node.cpp  test_thinking_node.cpp
src/bt_nodes_llm/test/launch/: test_llm_bt_nodes_launch.py
src/context_gatherer/: CMakeLists.txt  package.xml  plan.md
src/context_gatherer/config/: context_gatherer_params.yaml
src/context_gatherer/include/context_gatherer/: context_gatherer.hpp
src/context_gatherer/launch/: context_gatherer.launch.py
src/context_gatherer/src/: annotated_map_saver_node.cpp  context_gatherer_main.cpp  context_gatherer_node.cpp  satellite_map_annotator_node.cpp
src/context_gatherer/test/: README.md  mock_sensor_publisher.cpp  mock_sensor_publisher.hpp  mock_sensor_publisher_main.cpp  test_mock_sensor_publisher.cpp  test_osm_context.py
src/context_gatherer/test/launch/: test_context_gatherer.launch.py
src/generalist_bringup/: CMakeLists.txt  README.md  package.xml
src/generalist_bringup/config/: bt_executor_params.yaml
src/generalist_bringup/launch/: clearpath_a200_navigation_sim.launch.py  generalist_bringup.launch.py
src/generalist_bringup/src/: dummy_log_temperature_node.cpp  mock_gps_fix_publisher_node.cpp
src/husky_behavior_tree/: CMakeLists.txt  package.xml
src/husky_behavior_tree/config/: husky_bt.xml  husky_main_bt.btproj  husky_waypoints_bt.xml
src/husky_behavior_tree/include/husky_behavior_tree/: bt_conversions.hpp  drive_to.hpp  husky_behavior_tree.hpp  log_temp.hpp  register_nodes.hpp
src/husky_behavior_tree/src/: bt_main.cpp  husky_behavior_tree.cpp  husky_bt_plugin.cpp  register_nodes.cpp
src/llm_interface/: CMakeLists.txt  README.md  bt_xml_generator.py  implementation_plan.md  llm_service_node.py  package.xml  prompt_templates.py  service_definition_plan.md  setup.cfg  setup.py
src/llm_interface/config/: llm_interface_params.yaml  prompt_config.yaml
src/llm_interface/launch/: llm_interface.launch.py
src/llm_interface/llm_interface/: __init__.py  node.py
src/llm_interface/resource/: llm_interface
src/llm_interface/srv/: LLMQuery.srv
src/llm_interface/test/: test_bt_xml_generator.py  test_llm_service_node.py  test_payload_refinement.py  test_prompt_templates.py
src/mission_reasoner/: README.md  package.xml  setup.cfg  setup.py
src/mission_reasoner/config/: mission_reasoner_params.yaml
src/mission_reasoner/mission_reasoner/: __init__.py  node.py  reasoner.py
src/mission_reasoner/test/: test_reasoner.py
src/plan_reviewer/: package.xml  setup.cfg  setup.py
src/plan_reviewer/config/: plan_reviewer_params.yaml
src/plan_reviewer/plan_reviewer/: __init__.py  node.py  renderer.py
src/plan_reviewer/resource/: plan_reviewer
src/plan_reviewer/test/: test_node_helpers.py  test_renderer.py
src/robot_actions/: CMakeLists.txt  README.md  package.xml
src/robot_actions/include/robot_actions/: common.hpp  distance_traveled.hpp  find_object_location.hpp  get_current_pose.hpp  log_temperature.hpp  move_to.hpp  parse_waypoints.hpp  restart_node.hpp  take_picture.hpp
src/robot_actions/src/: basic_actions.cpp  distance_traveled.cpp  find_object_location.cpp  get_current_pose.cpp  log_temperature.cpp  move_to.cpp  parse_waypoints.cpp  plugin_registration.cpp  restart_node.cpp  take_picture.cpp
src/user_interface/: README.md  package.xml  plan_chat_interface.md  setup.py
src/user_interface/config/: chat_params.yaml
src/user_interface/test/: test_command_router.py  test_pending_plan_preview.py
src/user_interface/user_interface/: chat_node.py  command_router.py  mission_gateway.py  pending_plan_preview.py  web_ui_node.py
src/user_interface/user_interface/templates/: __init__.py  index.html
(+27 files in other folders)
