<?xml version="1.0"?>
<package format="3">
  <name>bt_executor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Lukas.E@web.de">luke</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>nlohmann_json</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
