<?xml version="1.0"?>
<package format="3">
  <name>bt_nodes_llm</name>
  <version>0.0.0</version>
  <description>BehaviorTree.CPP nodes that coordinate with the LLM service.</description>

  <maintainer email="Lukas.E@web.de">luke</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nlohmann_json</depend>
  <depend>llm_interface</depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
