<?xml version="1.0"?>
<package format="3">
  <name>context_gatherer</name>
  <version>0.0.0</version>
  <description>Collects multimodal context (camera, GPS, map) for the LLM-enabled behavior tree.</description>

  <maintainer email="Lukas.E@web.de">luke</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nlohmann_json</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
