<?xml version="1.0"?>
<package format="3">
  <name>generalist_bringup</name>
  <version>0.1.0</version>
  <description>Global configuration, parameter bundles, and launch files for the generalist BT stack.</description>
  <maintainer email="todo@example.com">Generalist Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bt_executor</exec_depend>
  <exec_depend>robot_actions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
