<?xml version="1.0"?>
<package format="3">
  <name>llm_interface</name>
  <version>0.0.0</version>
  <description>Interfaces for querying the large language model.</description>

  <maintainer email="Lukas.E@web.de">luke</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nlohmann_json</depend>
  <depend>requests</depend>
  <depend>ament_index_python</depend>
  <depend>python3-yaml</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>openai</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
