<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>Terminal and web chat UI that forwards operator commands to the mission coordinator / llm_interface layers.</description>
  <maintainer email="Lukas.E@web.de">luke</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-rich</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
